[package]
name = "help-me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version= '4.0.29',features = ["derive"]}
ureq = {version='2.6.1', features = ["json"]}

dotenv = "0.15.0"
tinyjson = "2.5.1"
